taskview spacing fix. leaving space for texts below tiles.

--- a/homeFit.css
+++ b/homeFit.css
@@ -61,8 +61,9 @@ table {
 }
 
 .taskLevel img {
-	width: 20%;
+	width: 16.5%;
 	margin-left: 10%;
+	margin-bottom: 30px;
 }
 
 .taskTitle {
